welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: ')' expected but ';' found.
def ligne (c1 : Color; c2: Color)
                     ^PatternPicture:16: error: ';' expected but ')' found.
def ligne (c1 : Color; c2: Color)
                                ^